responsive issue with move slider buttons on mobile fixed

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,16 +1,18 @@
-.home-page .title {
-  font-size: 45px;
-  font-weight: bold;
-  float: left;
+.home-page {
+  .title {
+    font-size: 45px;
+    font-weight: bold;
+    float: left;
+    // clear: both;
+  } 
+  .popular {
+    height: 500px;
+  }
+  
+  .new {
+    height: 620px;
+  }
 } 
-
-.popular {
-  height: 500px;
-}
-
-.new {
-  height: 620px;
-}
 
 @media (max-width: 1100px) {
   .home-page {
