--- a/src/components/item-buttons/item-buttons.scss
+++ b/src/components/item-buttons/item-buttons.scss
@@ -91,7 +91,7 @@
 @media (max-width: 375px) {
   .item_popular {
    .item__buttons {
-     margin-top: 5px; ;
+     margin-top: 17px;
    }
   }
   .item_new {
