--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -150,7 +150,7 @@
 
   .item_new {
     height: 250px;
-    min-height: 0;
+    min-height: 250px;
     .item__image {
       height: 150px; 
     }
